--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "config": "^3.3.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
@@ -43,6 +44,7 @@
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
     "@types/bcrypt": "^3.0.0",
+    "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
